# mini-database-engine

./: .gitignore  CMakeLists.txt
docs/: architecture.md
include/: btree.hpp  pager.hpp  row.hpp  table.hpp
src/: btree.cpp  main.cpp  pager.cpp  row.cpp  table.cpp
tests/: test_btree.cpp  test_pager.cpp  test_row.cpp  test_table.cpp
